# ext-cardano-ogmios

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy.yml  controller.yml  instance.yml  proxy.yml
bootstrap/: main.tf  variables.tf
bootstrap/configs/: main.tf
bootstrap/configs/mainnet/: config.json
bootstrap/configs/preprod/: config.json
bootstrap/configs/preview/: config.json
bootstrap/configs/prime-testnet/: config.json
bootstrap/configs/vector-testnet/: config.json
bootstrap/crds/: main.tf
bootstrap/feature/: main.tf  monitor.tf  operator.tf  rbac.tf  service.tf
bootstrap/feature/operator/: deployment.tf  main.tf  monitor.tf  service.tf
bootstrap/instance/: main.tf  monitor.tf  ogmios.tf
bootstrap/proxy/: cert.tf  config.tf  deployment.tf  main.tf  monitor.tf  proxy-config.toml.tftpl  service.tf
bootstrap/service/: main.tf  service.tf
docker/: dockerfile.operator  dockerfile.proxy
docker/ogmios-5/: Dockerfile
docker/ogmios-6/: Dockerfile
docker/ogmios-6/genesis/prime-testnet/byron/: genesis.json
docker/ogmios-6/genesis/prime-testnet/shelley/: genesis.alonzo.json  genesis.json
docker/ogmios-6/genesis/vector-testnet/: shelley.json
examples/: README.md  manifest.yaml  setup
operator/: Cargo.toml  Dockerfile  README.md
operator/src/: config.rs  controller.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  utils.rs
operator/src/handlers/: auth.rs  gateway.rs  mod.rs
operator/src/helpers/: mod.rs
operator/yaml/: crd.yaml  port.yaml
proxy/: .gitignore  Cargo.toml  README.md
proxy/examples/: manifest.yaml  setup
proxy/src/: auth.rs  config.rs  limiter.rs  main.rs  metrics.rs  proxy.rs  tiers.rs  utils.rs
