[package]
name = "operator"
version = "0.1.0"
edition = "2021"
default-run = "controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
argon2 = "0.5.2"
base64 = "0.21.5"
bech32 = "0.9.1"
chrono = "0.4.34"
dotenv = "0.15.0"
futures = "0.3.29"
k8s-openapi = { version = "0.20.0", features = ["latest"] }
kube = { version = "0.87.1", features = ["runtime", "client", "derive"] }
lazy_static = "1.4.0"
prometheus = "0.13.3"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name="controller"
path="src/main.rs"

[[bin]]
name="crdgen"
path="src/crdgen.rs"

[lib]
path = "src/lib.rs"
